doctor-profile: Adjusted responsive design and spacing issues for doctor profile page

--- a/Doctor/doctor-profile.css
+++ b/Doctor/doctor-profile.css
@@ -171,6 +171,7 @@
   height: 2rem;
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 .update:hover {
@@ -181,6 +182,9 @@
 
 button {
 cursor: pointer;
+}
+.heading h2 {
+  text-align: center;
 }
 
 @media (max-width:900px) {
@@ -270,6 +274,7 @@ cursor: pointer;
     display: none;
   }
   /***** styling for content headings *****/
+ 
 
 
 }
@@ -312,20 +317,22 @@ cursor: pointer;
     .location {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-start;
+        justify-content: space-evenly;
+        align-items: center;
         gap: 10px;
 
     }
     .location-address {
         display: flex;
         flex-direction: column;
-        padding: 0 13rem 0 1rem;
+        padding: 1em 13rem 2em 1rem;
     }
     .address p{
         margin-bottom: 0;
     }
-
-
-
+}
+@media  screen and (max-width:400px) {
+    .location-address{
+      flex-direction: column;
+    }
 }
